--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 
-  background: url("https://res.cloudinary.com/dkfnd7xy7/image/upload/v1634522120/background_lnvziq.webp");
+  background: url("/static/background.webp");
 
   background-position: 50%;
   background-repeat: no-repeat;
